--- a/css/principal.css
+++ b/css/principal.css
@@ -3,6 +3,7 @@
   justify-content: space-between;
   align-items: flex-start;
   padding-top: 2em;
+  padding-bottom: 5em;
 }
 
 .principal .postsList{
