--- a/css/postList.css
+++ b/css/postList.css
@@ -352,7 +352,7 @@ footer .footer-below {
     border-color: #ffb500;
     font-weight: 700;
     border-radius: 50px;
-    padding: 10px 50px;
+    padding: 10px 30px;
     font-size: 20px;
     text-transform: uppercase;
 	box-shadow:0 10px 25px rgba(0,0,0,.2), 0 1px 3px rgba(0,0,0,.08);
@@ -450,7 +450,7 @@ footer .footer-below {
 	height:75px;
 	width:1px;
 	margin-left:35px;
-	background-color:#2C3E50;
+	background-color:#fff;
 	transform:rotate(45deg);
 	-ms-transform:rotate(45deg);
 	-webkit-transform:rotate(45deg);
@@ -459,7 +459,7 @@ footer .footer-below {
 .portfolio-modal .close-modal .lr .rl {
 	height:75px;
 	width:1px;
-	background-color:#2C3E50;
+	background-color:#fff;
 	transform:rotate(90deg);
 	-ms-transform:rotate(90deg);
 	-webkit-transform:rotate(90deg);
